--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   </head>
   <body>
     <div class="main-container">
+      <div class="background-img-1"></div>
+      <div class="background-img-2"></div>
       <div class="container">
         <div class="flex-container">
           <div class="content-1">
